--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
         }
 
         qa {
+            debuggable true
             buildConfigField("String", "SERVER_NEW_URL", "\"http://wstestpps.cgg.gov.in/OPMSAPI/api/\"")
             signingConfig signingConfigs.release
             ext.enableCrashlytics = false
